--- a/rock-paper-scissors/rock-paper-scissors.ipynb
+++ b/rock-paper-scissors/rock-paper-scissors.ipynb
@@ -25,40 +25,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Welcome to the game! \n",
+      "\n",
+      "Ok tell me, how many wins are needed to decide the winner? \n",
+      "1\n",
+      "Enter your choice: scissors\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is scissors, the machine's choice is scissors\n",
+      " >>> It's a tie!\n",
+      "Up untill this moment, you've won 0 times, to machine's 0. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Enter your choice: scissors\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is scissors, the machine's choice is rock\n",
+      " >>> Machine won!\n",
+      "Up untill this moment, you've won 0 times, to machine's 1. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Sorry, you lost. Goog luck next time.\n",
+      "\n",
+      "Final results:\n",
+      "           You've won 0 times, and machine did it 1 times. There were 1 ties\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
     "import random\n",
     "\n",
+    "print(\"\\n Welcome to the game! \\n\")\n",
+    "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
     "the_three_options = ['rock','paper','scissors']\n",
+    "results = []\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "number_of_games = 3????\n",
+    "rounds = int(input(\"Ok tell me, how many wins are needed to decide the winner? \\n\"))\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "game_must_win = 1????\n",
+    "\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def func_random():\n",
+    "    x = random.choice(the_three_options)\n",
+    "    return x\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
+    "def your_choice():\n",
+    "    a = True\n",
+    "    while a:\n",
+    "        player_choice = input(\"Enter your choice: \").lower()\n",
+    "        if player_choice in the_three_options:\n",
+    "            a = False\n",
+    "        else:\n",
+    "            print(\"Oops, not valid choice. Try again.\")\n",
+    "    return player_choice\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "def combat():\n",
+    "    player = your_choice()\n",
+    "    machine_choice = func_random()\n",
+    "    #print(\"Machine choose:\",machine_choice)\n",
+    "    if (player == machine_choice):\n",
+    "        #print(\"Tie!\")\n",
+    "        result = 0\n",
+    "    elif player == \"rock\":\n",
+    "        if machine_choice == \"paper\":\n",
+    "            #print(\"You lose!\", machine_choice, \"covers\", player)\n",
+    "            result = 1\n",
+    "        else:\n",
+    "            #print(\"You win!\", player, \"smashes\", machine_choice)\n",
+    "            result = 2\n",
+    "    elif player == \"paper\":\n",
+    "        if machine_choice == \"scissors\":\n",
+    "            #print(\"You lose!\", machine_choice, \"cut\", player)\n",
+    "            result = 1\n",
+    "        else:\n",
+    "            #print(\"You win!\", player, \"covers\", machine_choice)\n",
+    "            result = 2\n",
+    "    elif player == \"scissors\":\n",
+    "        if machine_choice == \"rock\":\n",
+    "            #print(\"You lose...\", machine_choice, \"smashes\", player)\n",
+    "            result = 1\n",
+    "        else:\n",
+    "            #print(\"You win!\", player, \"cut\", machine_choice)\n",
+    "            result = 2\n",
+    "    return player, machine_choice, result\n",
     "\n",
-    "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def show(player, machine_choice, winner):\n",
+    "    wins = results.count(2)\n",
+    "    loses = results.count(1)\n",
+    "    ties = results.count(0)\n",
+    "    print(\"\\n\")\n",
+    "    print(\"==\"*22)\n",
+    "    print(\"Your choice is {}, the machine's choice is {}\\n >>> {}!\".format(player, machine_choice, winner))\n",
+    "    print(\"Up untill this moment, you've won {} times, to machine's {}. There were {} ties.\".format(wins, loses, ties))\n",
+    "    print(\"\\n\")\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
     "\n",
@@ -69,10 +152,39 @@
     "# that accumulate the wins of each participant.\n",
     "\n",
     "\n",
+    "x = 0\n",
+    "while x < rounds:\n",
+    "    player, machine_choice, result = combat()\n",
+    "    results.append(result)\n",
+    "    if result == 0:\n",
+    "        winner = \"It's a tie\"\n",
+    "    elif result == 1:\n",
+    "        winner = \"Machine won\"\n",
+    "    else:\n",
+    "        winner = \"Player won\"\n",
+    "    wins = results.count(2)\n",
+    "    loses = results.count(1)\n",
+    "    ties = results.count(0)\n",
+    "\n",
+    "    show(player, machine_choice, winner)\n",
+    "\n",
+    "    x = max(wins, loses)\n",
+    "if wins < loses:\n",
+    "    print(\"Sorry, you lost. Goog luck next time.\")\n",
+    "else:\n",
+    "    print(\"Congradulations, you've won!\")\n",
+    "print(\"\\nFinal results:\\n           You've won {} times, and machine did it {} times. There were {} ties\".format(wins, loses, ties))\n",
+    "\n",
     "    \n",
-    "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "# Print by console the winner of the game based on who has more accumulated wins\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -97,46 +209,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Welcome to the game! \n",
+      "\n",
+      "Ok tell me, how many wins are needed to decide the winner? \n",
+      "4\n",
+      "Enter your choice:\n",
+      "rock\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is rock, the machine's choirce is rock\n",
+      " >>> It's a tie!\n",
+      "Up untill this moment, you've won 0 times, to machine's 0. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Enter your choice:\n",
+      "paper\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is paper, the machine's choirce is lizard\n",
+      " >>> Machine won!\n",
+      "Up untill this moment, you've won 0 times, to machine's 1. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Enter your choice:\n",
+      "lizard\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is lizard, the machine's choirce is rock\n",
+      " >>> Machine won!\n",
+      "Up untill this moment, you've won 0 times, to machine's 2. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Enter your choice:\n",
+      "rock\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is rock, the machine's choirce is spoke\n",
+      " >>> Machine won!\n",
+      "Up untill this moment, you've won 0 times, to machine's 3. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Enter your choice:\n",
+      "spoke\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is spoke, the machine's choirce is scissors\n",
+      " >>> Player won!\n",
+      "Up untill this moment, you've won 1 times, to machine's 3. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Enter your choice:\n",
+      "scissors\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is scissors, the machine's choirce is lizard\n",
+      " >>> Player won!\n",
+      "Up untill this moment, you've won 2 times, to machine's 3. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Enter your choice:\n",
+      "lizard\n",
+      "\n",
+      "\n",
+      "============================================\n",
+      "Your choice is lizard, the machine's choirce is scissors\n",
+      " >>> Machine won!\n",
+      "Up untill this moment, you've won 2 times, to machine's 4. There were 1 ties.\n",
+      "\n",
+      "\n",
+      "Sorry, you lost. Goog luck next time.\n",
+      "\n",
+      "Final results:\n",
+      "           You've won 2 times, and machine did it 4 times. There were 1 ties\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
+    "import random\n",
     "\n",
+    "print(\"\\n Welcome to the game! \\n\")\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
     "\n",
-    "\n",
     "# Assign a list of 5 possible options.\n",
-    "\n",
-    "\n",
+    "options = ['rock','paper','scissors','lizard','spoke']\n",
+    "results_v2 = []\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
     "\n",
-    "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "rounds_v2 = int(input(\"Ok tell me, how many wins are needed to decide the winner? \\n\"))\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def random_choice():\n",
+    "    x = random.choice(options)\n",
+    "    return x\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
-    "\n",
+    "def your_choice():\n",
+    "    a = True\n",
+    "    while a:\n",
+    "        player_choice = input(\"Enter your choice:\\n\").lower()\n",
+    "        if player_choice in options:\n",
+    "            a = False\n",
+    "        else:\n",
+    "            print(\"Oops, not valid choice. Try again.\")\n",
+    "    return player_choice\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
-    " \n",
+    "def combat():\n",
+    "    player = your_choice()\n",
+    "    machine = random_choice()\n",
+    "    if player == machine:\n",
+    "        result = 0\n",
+    "    elif player == \"rock\":\n",
+    "        if machine == \"paper\":\n",
+    "            result = 1\n",
+    "        elif machine == \"lizard\":\n",
+    "            result = 2\n",
+    "        elif machine == \"spoke\":\n",
+    "            result = 1\n",
+    "        else:\n",
+    "            result = 2 #scissors\n",
+    "    elif player == \"paper\":\n",
+    "        if machine == \"scissors\":\n",
+    "            result = 1\n",
+    "        elif machine == \"lizard\":\n",
+    "            result = 1\n",
+    "        elif machine == \"spoke\":\n",
+    "            result = 2\n",
+    "        else:\n",
+    "            result = 2 #rock\n",
+    "    elif player == \"scissors\":\n",
+    "        if machine == \"rock\":\n",
+    "            result = 1\n",
+    "        elif machine == \"lizard\":\n",
+    "            result = 2\n",
+    "        elif machine == \"spoke\":\n",
+    "            result = 1\n",
+    "        else:\n",
+    "            result = 2 #paper\n",
+    "    elif player == \"lizard\":\n",
+    "        if machine == \"spoke\":\n",
+    "            result = 2\n",
+    "        elif machine == \"rock\":\n",
+    "            result = 1\n",
+    "        elif machine == \"paper\":\n",
+    "            result = 2\n",
+    "        else:\n",
+    "            result = 1 #scissors\n",
+    "    elif player == \"spoke\":\n",
+    "        if machine == \"rock\":\n",
+    "            result = 2\n",
+    "        elif machine == \"paper\":\n",
+    "            result = 1\n",
+    "        elif machine == \"scissors\":\n",
+    "            result = 2\n",
+    "        else:\n",
+    "            result = 1 #lizard\n",
     "\n",
-    "    \n",
+    "    return player, machine, result\n",
+    "\n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def show(player, machine, winner):\n",
+    "    wins = results_v2.count(2)\n",
+    "    loses = results_v2.count(1)\n",
+    "    ties = results_v2.count(0)\n",
+    "    print(\"\\n\")\n",
+    "    print(\"==\"*22)\n",
+    "    print(\"Your choice is {}, the machine's choirce is {}\\n >>> {}!\".format(player, machine, winner))\n",
+    "    print(\"Up untill this moment, you've won {} times, to machine's {}. There were {} ties.\".format(wins, loses, ties))\n",
+    "    print(\"\\n\")\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
     "\n",
@@ -144,12 +410,50 @@
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
+    "x = 0\n",
+    "while x < rounds_v2:\n",
+    "    player, machine, result = combat()\n",
+    "    results_v2.append(result)\n",
     "\n",
-    "    \n",
+    "    if result == 0:\n",
+    "        winner = \"It's a tie\"\n",
+    "    elif result == 1:\n",
+    "        winner = \"Machine won\"\n",
+    "    elif result == 2:\n",
+    "        winner = \"Player won\"\n",
+    "\n",
+    "    wins = results_v2.count(2)\n",
+    "    loses = results_v2.count(1)\n",
+    "    ties = results_v2.count(0)\n",
+    "\n",
+    "    show(player, machine, winner)\n",
+    "\n",
+    "    x = max(wins, loses)\n",
+    "\n",
+    "if wins < loses:\n",
+    "    print(\"Sorry, you lost. Goog luck next time.\")\n",
+    "else:\n",
+    "    print(\"Congradulations, you've won!\")\n",
+    "\n",
+    "print(\"\\nFinal results:\\n           You've won {} times, and machine did it {} times. There were {} ties\".format(wins, loses, ties))\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
