--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Bus\n",
     "\n",
@@ -32,53 +34,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "bus_stop_1= (5,0)\n",
+    "bus_stop_2= (4,3)\n",
+    "bus_stop_3= (3,2)\n",
+    "bus_stop_4= (2,1)\n",
+    "stops = [bus_stop_1, bus_stop_1, bus_stop_3, bus_stop_4]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Calculate the number of stops.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "print(\"number of stops = \", len(stops))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of passangers in each stop =  [5, 10, 11, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "passengers_inside = []\n",
+    "for rein, raus in stops:\n",
+    "    bar = 0\n",
+    "    if passengers_inside:\n",
+    "        bar=passengers_inside[-1]\n",
+    "        \n",
+    "    passengers_inside.append(bar + rein - raus)\n",
+    "print(\"number of passangers in each stop = \", passengers_inside)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum occupation of the bus =  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Find the maximum occupation of the bus.\n",
+    "print(\"maximum occupation of the bus = \", max(passengers_inside))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average occupation of the bus =  9.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "average_occupation = (sum(passengers_inside))/len(stops)\n",
+    "print(\"average occupation of the bus = \", average_occupation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SE of the occupation in the bus =  3.1091263510296048\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator = 0\n",
+    "denominator = 0\n",
+    "for i in passengers_inside:\n",
+    "    numerator += (i - average_occupation)**2\n",
+    "\n",
+    "denominator = len(passengers_inside) - 1\n",
+    "se = (numerator/denominator)**0.5\n",
+    "\n",
+    "print(\"SE of the occupation in the bus = \", se)"
    ]
   },
   {
@@ -105,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
