--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,31 +45,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "\n",
+    "gandalfs_wins = 0\n",
+    "sarumans_wins = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf won 6 times and Saruman won 4 times.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "for i in range(0,len(gandalf)):\n",
+    "    if int(gandalf[i]) > int(saruman[i]):\n",
+    "        gandalfs_wins += 1\n",
+    "    elif int(gandalf[i]) < int(saruman[i]):\n",
+    "        sarumans_wins += 1\n",
+    "\n",
+    "print(\"Gandalf won\", gandalfs_wins, \"times and\", \"Saruman won\", sarumans_wins, \"times.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The winner is Gandalf.\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "\n",
+    "if gandalfs_wins > sarumans_wins:\n",
+    "    print(\"The winner is Gandalf.\")\n",
+    "elif gandalfs_wins < sarumans_wins:\n",
+    "    print(\"The winner is Saruman.\")\n",
+    "elif gandalfs_wins == sarumans_wins:\n",
+    "    print(\"Its a draw.\")"
    ]
   },
   {
@@ -116,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,51 +172,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "gandalf_powerlist=[]\n",
+    "for spell in gandalf:\n",
+    "    gandalf_powerlist.append(POWER[spell])\n",
+    "\n",
+    "saruman_powerlist=[]\n",
+    "for spell in saruman:\n",
+    "    saruman_powerlist.append(POWER[spell])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the winner is Gandalf\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
-    "\n",
+    "winner_clash=[]\n",
     "\n",
     "# Execution of spell clashes\n",
+    "for i in range(0,len(gandalf)):\n",
+    "    if int(gandalf_powerlist[i]) > int(saruman_powerlist[i]):\n",
+    "        winner_clash.append(\"Gandalf\")\n",
+    "    elif int(gandalf_powerlist[i]) < int(saruman_powerlist[i]):\n",
+    "        winner_clash.append(\"Saruman\")\n",
     "\n",
-    "\n",
-    "\n",
+    "winner=None\n",
     "# check for 3 wins in a row\n",
+    "for i in winner_clash[3:]:\n",
+    "    if i == winner_clash[-1] and i==winner_clash[-2]:\n",
+    "        winner=i\n",
     "\n",
-    "\n",
-    "# check the winner\n"
+    "# check the winner\n",
+    "print(\"the winner is\", winner)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average of gandalf´s spells 35.0\n",
+      "average of saruman´s spells 30.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "average_gandalf=sum(gandalf_powerlist)/len(gandalf_powerlist)\n",
+    "print(\"average of gandalf´s spells\", average_gandalf)\n",
+    "\n",
+    "average_saruman=sum(saruman_powerlist)/len(saruman_powerlist)\n",
+    "print(\"average of saruman´s spells\", average_saruman)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SE of Gandalfs spells =  17.795130420052185\n",
+      "SE of Sarumans spells =  16.40629960309962\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "numerator = 0\n",
+    "denominator = 0\n",
+    "for i in gandalf_powerlist:\n",
+    "    numerator += (i - average_gandalf)**2\n",
+    "\n",
+    "denominator = len(gandalf_powerlist) - 1\n",
+    "se_gandalf = (numerator/denominator)**0.5\n",
+    "\n",
+    "print(\"SE of Gandalfs spells = \", se_gandalf)\n",
+    "\n",
+    "numerator = 0\n",
+    "denominator = 0\n",
+    "for i in saruman_powerlist:\n",
+    "    numerator += (i - average_saruman)**2\n",
+    "\n",
+    "denominator = len(saruman_powerlist) - 1\n",
+    "se_saruman = (numerator/denominator)**0.5\n",
+    "\n",
+    "print(\"SE of Sarumans spells = \", se_saruman)\n"
    ]
   },
   {
@@ -210,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
