--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,44 +57,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It´s true, he does!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "\n",
+    "points_unique = set(points)\n",
+    "if len(points_unique) != len(points):\n",
+    "    print(\"It´s true, he does!\")\n",
+    "elif len(points_unique) == len(points):\n",
+    "    print(\"no he doesnt\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: Due to definition of quadrants positions on axes are not covered\n",
+      "Quandrant 1 =10; Quadrant 2 =6; Quadrant 3 =2; Quadrant 4 =2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "q1=0\n",
+    "q2=0\n",
+    "q3=0\n",
+    "q4=0\n",
+    "any_axis=0\n",
+    "\n",
+    "for i in points:\n",
+    "    if i[0]>0 and i[1]>0:\n",
+    "        q1 += 1\n",
+    "    elif i[0]<0 and i[1]>0:\n",
+    "        q2 += 1\n",
+    "    elif i[0]<0 and i[1]<0:\n",
+    "        q3 += 1\n",
+    "    elif i[0]>0 and i[1]<0:\n",
+    "        q4 += 1\n",
+    "    else:\n",
+    "        any_axis += 1\n",
+    "print(\"NOTE: Due to definition of quadrants positions on axes are not covered\")\n",
+    "print(\"Quandrant 1 =\" + str(q1) + \"; Quadrant 2 =\" + str(q2) + \"; Quadrant 3 =\" + str(q3) + \"; Quadrant 4 =\" + str(q4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closest shot are  [(0, 2), (0, -2)]  with distance to the center of  2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Find the point closest to the center. Calculate its distance to the center\n",
+    "# Defining a function that calculates the distance to the center can help.\n",
+    "all_distance = []\n",
+    "closest_shot = []\n",
+    "for i in points:\n",
+    "    all_distance.append((i[0]**2+i[1]**2)**0.5)\n",
+    "for i in points:\n",
+    "    if (i[0]**2+i[1]**2)**0.5 == min(all_distance):\n",
+    "        closest_shot.append(i)\n",
+    "print(\"Closest shot are \", closest_shot, \" with distance to the center of \", min(all_distance))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of arrows to be collected  2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "arrows_outside=0\n",
+    "for i in all_distance:\n",
+    "    if i > 9:\n",
+    "        arrows_outside += 1\n",
+    "        \n",
+    "print(\"number of arrows to be collected \", arrows_outside)"
    ]
   },
   {
@@ -121,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
