--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -27,44 +27,143 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose: ['stone', 'paper', 'scisors']paper\n",
+      "The computer chose: paper\n",
+      "The user chose: paper\n",
+      "Computer: 0\n",
+      "User: 0\n",
+      "----------------------------------\n",
+      "Choose: ['stone', 'paper', 'scisors']paper\n",
+      "The computer chose: paper\n",
+      "The user chose: paper\n",
+      "Computer: 0\n",
+      "User: 0\n",
+      "----------------------------------\n",
+      "Choose: ['stone', 'paper', 'scisors']paper\n",
+      "The computer chose: paper\n",
+      "The user chose: paper\n",
+      "Computer: 0\n",
+      "User: 0\n",
+      "----------------------------------\n",
+      "Choose: ['stone', 'paper', 'scisors']paper\n",
+      "The computer chose: stone\n",
+      "The user chose: paper\n",
+      "Computer: 0\n",
+      "User: 1\n",
+      "----------------------------------\n",
+      "Choose: ['stone', 'paper', 'scisors']paper\n",
+      "The computer chose: scisors\n",
+      "The user chose: paper\n",
+      "Computer: 1\n",
+      "User: 1\n",
+      "----------------------------------\n",
+      "Choose: ['stone', 'paper', 'scisors']paper\n",
+      "The computer chose: stone\n",
+      "The user chose: paper\n",
+      "Computer: 1\n",
+      "User: 2\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "You have won!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
-    "\n",
+    "import random\n",
+    "#random.choice(list)\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
+    "states = [\"stone\", \"paper\", \"scisors\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "max_games = 3\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "wins = 2\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def computer_choice(states):\n",
+    "    return random.choice(states)\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
-    "\n",
+    "def user_choice(states):\n",
+    "    end = 0\n",
+    "    while not end:\n",
+    "        users_input = input(\"Choose: \" + str(states))\n",
+    "        if users_input in states:\n",
+    "            end = 1\n",
+    "        else:\n",
+    "            print(\"try again\")\n",
+    "    return users_input\n",
+    "        \n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "def winner(computer, user):\n",
+    "    if computer == user:\n",
+    "        return 0\n",
+    "    \n",
+    "    elif ((computer == 'stone') and (user == 'scisors')) or ((computer== 'paper') and (user == 'stone' )) or ((computer == 'scisors')and(user =='paper')):\n",
+    "        return 1\n",
     "\n",
+    "    else:\n",
+    "        return 2\n",
+    "    \n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def game_state(points, computer, user, part1, part2):    \n",
+    "    print(\"The computer chose: \" + computer)\n",
+    "    print(\"The user chose: \" + user)\n",
+    "    \n",
+    "    # Who won:\n",
+    "    if points == 1:\n",
+    "        part1 += 1\n",
+    "    elif points == 2:\n",
+    "        part2 += 1\n",
+    "       \n",
+    "    print(\"Computer:\",part1)\n",
+    "    print(\"User:\",part2)\n",
+    "    print(\"----------------------------------\") \n",
+    "    return part1, part2\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "comp_wins = 0\n",
+    "user_wins = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
-    "\n",
+    "won = 0\n",
+    "part1 = 0\n",
+    "part2 = 0\n",
+    "points = 0\n",
+    "while not won:\n",
+    "    computer = computer_choice(states)\n",
+    "    user = user_choice(states)\n",
+    "    points = winner(computer, user)\n",
+    "    part1, part2 = game_state(points, computer, user, part1, part2)\n",
+    "    \n",
+    "    if part1 == wins:\n",
+    "        print(\"----------------------------------\") \n",
+    "        print(\"The computer won\")\n",
+    "        won = 1\n",
+    "        \n",
+    "    elif part2 == wins:\n",
+    "        print(\"----------------------------------\") \n",
+    "        print(\"You have won!\")\n",
+    "        won = 1\n",
+    "            \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "  "
@@ -171,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
