--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -22,19 +22,41 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "on the last day he walks 25 cm\n",
+      "Days = 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "true_distance_perday = daily_advance - night_retreat\n",
+    "accumulated_distance = 0\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "walk_last_day = 0\n",
+    "while accumulated_distance < well_height:\n",
+    "    if accumulated_distance + daily_advance < well_height:\n",
+    "        accumulated_distance += true_distance_perday\n",
+    "        days += 1\n",
+    "    elif accumulated_distance + daily_advance >= well_height:\n",
+    "        print('on the last day he walks', (well_height - accumulated_distance), 'cm')\n",
+    "        walk_last_day = well_height - accumulated_distance\n",
+    "        accumulated_distance += (walk_last_day)\n",
+    "        days += 1\n",
+    "# Print the result with print('Days =', days)\n",
     "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n"
+    "print('Days =', days)"
    ]
   },
   {
@@ -69,34 +91,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 5\n",
+      "max displacement =  57\n",
+      "min displacement =  1\n",
+      "average displacement =  25.0\n",
+      "SE =  24.13503677229434\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "walk_last_day = 0\n",
+    "index = 0\n",
+    "while accumulated_distance < well_height:\n",
+    "    if accumulated_distance + advance_cm[index] < well_height:\n",
+    "        accumulated_distance += advance_cm[index] - night_retreat\n",
+    "    else:\n",
+    "        walk_last_day = well_height - accumulated_distance\n",
+    "        accumulated_distance += (walk_last_day)\n",
+    "    days +=1\n",
+    "    index += 1\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n",
+    "#Print the result with print('Days =', days)\n",
+    "print('Days =', days)\n",
     "\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
+    "displacement_list=[]\n",
+    "for i in advance_cm[:days-1]:\n",
+    "    displacement_list.append(i - night_retreat)\n",
     "\n",
+    "    \n",
+    "    \n",
+    "displacement_list.append(walk_last_day)\n",
     "\n",
+    "max_displacement=max(displacement_list)\n",
+    "print(\"max displacement = \", max_displacement)\n",
+    "\n",
+    "min_displacement=min(displacement_list)\n",
+    "print(\"min displacement = \", min_displacement)\n",
     "\n",
     "# What is its average progress?\n",
+    "avg_displacement=sum(displacement_list)/len(displacement_list)\n",
+    "print(\"average displacement = \", avg_displacement)\n",
     "\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "\n",
+    "numerator = 0\n",
+    "denominator = 0\n",
+    "for i in displacement_list:\n",
+    "    numerator += (i - avg_displacement)**2\n",
+    "\n",
+    "denominator = len(displacement_list) - 1\n",
+    "se = (numerator/denominator)**0.5\n",
+    "\n",
+    "print(\"SE = \", se)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -122,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
