--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -65,7 +65,7 @@
     "    for x in range(len(gandalf)):\n",
     "        if (saruman[x] > gandalf[x]):\n",
     "            s_score += 1\n",
-    "        if (saruman[x] < gandalf[x]):\n",
+    "        elif (saruman[x] < gandalf[x]):\n",
     "            g_score += 1\n",
     "        else:\n",
     "            g_score += 0\n",
